Inserindo novo layout para demonstracao.

--- a/v2 _demo_preview/index.html
+++ b/v2 _demo_preview/index.html
@@ -24,12 +24,10 @@
 
       <div class="barra_superior">
         <div class="container-fluid">
-          <div class="row">
-            <div class="col-2 m-0" style="height: 15vh;">   
-              <a href="https://www.gafisa.com.br/imoveis/residencial/update-vila-madalena" target="_blank"><img src="assets/img/logo_update.png" class="card-img-top" style="height: 100%; width: auto;"></a>            
-            </div>
-            <div class="col-10 m-0" style="height: 15vh; display: flex; align-items: center; justify-content: center;">                  
-              <h3 style="color: white; padding-left: 10px; text-transform: uppercase;">Visite agora mesmo o seu novo apartamento Gafisa <b>sem sair de casa!</b></h3>                            
+          <div class="row">            
+            <div class="col m-0" style="height: 15vh; display: flex; align-items: center; justify-content: center;">                  
+              <a href="#" target="_blank"><img src="assets/img/Logo_Bell_Domani.png" class="card-img-top" style="height: 16vh; width: auto;"></a>            
+              <h3 style="color: white; padding-left: 10px; text-transform: uppercase;">Visite agora mesmo o seu novo apartamento <b>sem sair de casa!</b></h3>                            
             </div> 
           </div>
         </div>
@@ -52,7 +50,7 @@
               <div class="card">
                 <img src="assets/img/img10.jpg" class="card-img-top" style="padding: 10px;">
                 <div class="card-body" style="text-align: center;">
-                  <h5 class="card-text"><b>Update Vila Madalena - Opção Planta</b></h5>
+                  <h5 class="card-text"><b>Bell Domani - Opção Planta 01</b></h5>
                   <div class="desktop-option">
                     <img src="assets/img/qrcode-apartamento.svg" class="img-qr-code">
                     <h6 class="card-text" id="text-scan"><b>Escaneie com seu smartphone para uma Experiência em AR.</b></h6>
@@ -66,11 +64,31 @@
                 </div>
               </div>  
             </div>
+
+            <div class="col" style="position: relative; display: flex; justify-content: center; align-items: center;">
+              <div class="card">
+                <img src="assets/img/img10.jpg" class="card-img-top" style="padding: 10px;">
+                <div class="card-body" style="text-align: center;">
+                  <h5 class="card-text"><b>Bell Domani - Opção Planta 02</b></h5>
+                  <div class="desktop-option">
+                    <img src="assets/img/qrcode-demo.svg" class="img-qr-code">
+                    <h6 class="card-text" id="text-scan"><b>Escaneie com seu smartphone para uma Experiência em AR.</b></h6>
+                  </div>
+
+                  <div style="width: 100%; display: flex; justify-content: center;">
+                    <div class="my-bottom">
+                      <h5 style="padding-left: 10px; padding-right: 10px; cursor: pointer;"><a href="https://hollox.com.br/demo" target="_blank"><b>Visite agora mesmo</b></a></h5>
+                    </div> 
+                  </div>                   
+                </div>
+              </div>  
+            </div>
+
             <div class="col in-left">
               <div class="card">
                 <img src="assets/img/img12.jpg" class="card-img-top" style="padding: 10px; text-align: center;">
                 <div class="card-body" style="text-align: center;">
-                  <h5 class="card-text"><b>Update Vila Madalena - Opção Fachada Externa</b></h5>
+                  <h5 class="card-text"><b>Bell Domani - Opção Fachada Externa</b></h5>
                   <div class="desktop-option">                      
                     <img src="assets/img/qrcode-predio.svg" class="img-qr-code">
                     <h6 class="card-text" id="text-scan"><b>Escaneie com seu smartphone para uma Experiência em AR.</b></h6>
@@ -86,13 +104,11 @@
             </div>              
           </div>            
           
-          <div class="row" style="margin-top: 30px;">
-            <div class="col-sm-8 col-md-7 m-0">                
-              <h4 style="color: white; padding-left: 10px;">Rua Simpatia 200, Vila Madalena - São Paulo | SP</h4>                
-            </div>
-            <div class="col-sm-8 col-md-5 m-0">
-              <a href="https://www.gafisa.com.br/imoveis/residencial/update-vila-madalena" target="_blank"><img src="assets/img/selo_gafisa.png" class="card-img-top" style="width: 220px; position: absolute; right: 0;"></a>                                         
-            </div> 
+          <div class="row" style="margin-top: 30px; height: 10vh;">
+            <div class="col m-0" style="position: relative; display: flex; align-items: center; justify-content: center;">                
+              <a href="#" target="_blank"><img src="assets/img/Logo_Bell_Domani.png" class="card-img-top" style="height: 16vh; width: auto;"></a>
+              <h4 style="color: white; padding-left: 10px;">R. Aracajú, 1320 - Santo Antônio, Joinville | SC</h4>                
+            </div>            
           </div>  
                     
         </div>          
